# Mandelbrot-Julia-Sets---OpenGL

./: CMakeLists.txt  main.cpp  shader.glsl
